Remove UseParNewGC from default JVM options